# xilikelihood

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  REPRODUCING.md  approximations.py  calc_pdf.py  characteristic_functions.py  cl2xi_transforms.py  copula.py  copula_funcs.py  core_utils.py  coupling_utils.py  cov_calc.py  cov_funcs.py  cov_setup.py  data_statistics.py  distributions.py  file_handling.py  gaussian_cf.ipynb  grf_classes.py  helper_funcs.py  jax_example.ipynb  likelihood.py  mask_apo.ipynb  mask_props.py  mock_data.npz  moments.py  nd_approximation.ipynb  nd_approximation.py  noise_utils.py  plotting.py  postprocess_nd_likelihood.py  pseudo_alm_cov.py  pyproject.toml  requirements.txt  s8_example.py  (+14 more)
2ptlikelihood/: cl2xi_transforms.py  copula_funcs.py  distributions.py  file_handling.py  likelihood.py  plotting.py  pseudo_alm_cov.py  simulate.py
_regtest_outputs/unittests.test_cov_xi__0/: arrays.npy
_regtest_outputs/unittests.test_wllpmmp__0/: arrays.npy
development/: README.md  legacy_tests.py
development/experiments/: README.md  coupling_example.py  coupling_utils.py  gamma_test.py
development/notebooks/: README.md  gaussian_cf.ipynb  mask_apo.ipynb
development/scripts/: copula_experiments.py
docs/: conf.py  configuration.md  index.md  installation.md  quickstart.md  repository_reference.rst  requirements.txt
legacy/: README.md  TODO.md  calc_pdf_v1.py  config_based_analysis.py  file_handling_v1.py  old_functions.py  setup_m.py  setup_nd_likelihood.py
simulation_scripts/: README.md  jobarray_xisimnd  xi_sim_nD.py
talks/: talkplots.py
tests/: conftest.py  test_cl2xi_transforms.py  test_copula_funcs.py  test_cov_funcs.py  test_data_statistics.py  test_distributions.py  test_likelihood.py  test_likelihood_gaussian_mode.py  test_mask_props.py  test_mock_data.py  test_noise_utils.py  test_pseudo_alm_cov.py  test_sampler_basic.py  test_simulate.py  test_theoretical_moments.py  test_theory_cl.py  test_wpm_funcs.py
xilikelihood/: __init__.py  cl2xi_transforms.py  copula_funcs.py  core_utils.py  cov_funcs.py  data_statistics.py  diagnostic_tools.py  distributions.py  exact_2d.py  file_handling.py  likelihood.py  mask_props.py  mock_data.py  noise_utils.py  nu_estimation.py  plotting.py  pseudo_alm_cov.py  simulate.py  theory_cl.py  wpm_funcs.py
(+90 files in other folders)
